--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
       <div class="drag-text">
         <img
-          src="https://biz.chosun.com/resizer/upxrErVJaVU7hknU4rKnFPqFOjw=/616x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosunbiz/FCSMYWXVHGQL4SS7VAKR64NBZY.jpg"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiNPp_vpzv4Jjqi1i-zBEWAPyEOpZXrOCE9sLBc4yhIA&s"
           class="mt-5 pt-5 upload">
         <h3 class="mb-5 pb-5 pt-4  upload-text">사진을 올려놓거나 눌러서 <p>업로드하세요!</p>
           <p>upload pictures</p>
